test_v/error.txt
%Error: rom.v:28:7: Can't resolve module reference: 'SSS64'
   28 | SSS64 u_SSS(
      |       ^~~~~
%Warning-TIMESCALEMOD: sad/SSS64.v:3:8: Timescale missing on this module as other modules have it (IEEE 1800-2017 3.14.2.3)
    3 | module SSS(
      |        ^~~
                       rom.v:30:1: ... note: In file included from rom.v
                       rom.v:22:8: ... Location of module with timescale
   22 | module rom(
      |        ^~~
                       ... For warning description see https://verilator.org/warn/TIMESCALEMOD?v=5.014
                       ... Use "/* verilator lint_off TIMESCALEMOD */" and lint_on around source to disable this message.
%Error: Exiting due to 1 error(s), 1 warning(s)
